fix: correct photo link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="wrapper">
         <div class="left">
-            <div class="center"><img alt="Photo" src="img/photo.jpg"></div>
+            <div class="center"><img alt="Photo" src="photo.jpg"></div>
             <h2 class="caption">Personal Information </h2>
             <li>
                 <ul><span class="b">Location:</span>Russia, Voronezh</ul>
